attempt to fix overflow of aligned imgs

--- a/packages/assets/styles/classes.scss
+++ b/packages/assets/styles/classes.scss
@@ -833,6 +833,7 @@ a,
 // MARKDOWN
 
 .markdown-body {
+  overflow-y: auto;
   h1:first-child {
     margin-top: 0;
   }
